[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/box.png" type="Texture" id=1]
[ext_resource path="res://src/Box.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18.3999, 18.5527 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20.9198, 20.4426 )

[node name="Box" type="KinematicBody2D" groups=["entity"]]
collision_mask = 3
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="ShroomZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShroomZone"]
shape = SubResource( 2 )

[node name="PushRays" type="Node2D" parent="."]

[node name="LeftRay" type="RayCast2D" parent="PushRays"]
position = Vector2( -18, 0 )
enabled = true
cast_to = Vector2( -20, 0 )
collision_mask = 2

[node name="RightRay" type="RayCast2D" parent="PushRays"]
position = Vector2( 18, 0 )
enabled = true
cast_to = Vector2( 20, 0 )
collision_mask = 2

[connection signal="body_entered" from="ShroomZone" to="." method="_on_ShroomZone_body_entered"]
